Fixing overflow issue.

--- a/packages/docs/styleguide/styles.css
+++ b/packages/docs/styleguide/styles.css
@@ -116,13 +116,14 @@ h2 {
 }
 .close-icon {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 50px;
+  right: 40px;
   z-index: 10;
   width: 50px;
   background: lightgray;
   border-radius: 50%;
   opacity: 0.4;
+  cursor: pointer;
 }
 .docs_btn {
   background-color: #880061;
@@ -132,4 +133,13 @@ h2 {
   border-radius: 2px;
   padding: 0 20px;
   font-size: 12px;
+}
+.editor_wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  overflow: scroll;
 }
